# uvproject

./: .env  Dockerfile  config.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  session_util.py  streamlit_ui.py  student_performance_ranked.csv
app/: main.py
core/: db.py  graph.py  llm.py
core/database/: curd.py  databse.py  dbdb.py
core/db/: curd.py  db.py  dbupdate.py
core/graph/: admin_graph.py  performance_graph.py  teacher_graph.py
core/middleware/: audit_middleware.py
core/model/: schema.py
core/node/: admin_node.py  performance_node.py  teacher_node.py
core/security/: hashing.py
core/utils/: audit_events.py  audit_helper.py
llm/: llm.py
routers/: assignement.py  bulk_subjecttermsplit.py  chat.py  classteacherallocation.py  logging_config.py  login.py  mark.py  officestaff.py  parent.py  performance.py  student.py  subjecttermsplit.py  teacher.py  users.py
routers/allocation/: classteacherallocation.py  studentclassallocation.py
routers/analysis/: performance.py
routers/bulkallocations/: bulk_class_teacher_allocations.py  bulk_student_class_allocations.py
routers/bulkinformations/: bulk_officestaff.py  bulk_parent.py  bulk_student.py  bulk_teacher.py
routers/bulkmarkposting/: bulk_assignement.py  bulk_subjecttermsplit.py  bulk_term_mark.py
routers/info/: officestaff.py  parent.py  (+4 more)
ui/: application_ui.py  bulk_subject_term_split.py  change_password.py  class_teacher_allocation.py  dashboard_ui.py  display_ui.py  inforelated_ui.py  login_ui.py  markposting.py  performance_ui.py  session.py  session_timeout.py  sidebar_ui.py  streamlit_ui.py  student_class_allocation.py
(+41 files in other folders)
