[project]
name = "uvproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.6",
    "langgraph>=0.6.1",
    "matplotlib>=3.10.5",
    "openai>=1.97.1",
    "pydantic[email]>=2.11.7",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.47.1",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]
